--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,7 +109,7 @@
                 </ul>
                 <a class="verTodos" href="lista-eventos.html">Ver todas las noticias</a>
               </div>
-              <div class="tab-pane fade" id="eventos">
+              <div class="tab-pane fade" id="events">
                 <ul class="seccionNuevasNoticias">
                   <li>
                     <div class="media">
