--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,10 +61,10 @@
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="seccionNoticias wow fadeInRight">
             <ul class="nav nav-tabs noticiasBorder" id="myTab2">
-              <li class="active"><a href="#nuevasNoticias" data-toggle="tab">Recientes</a></li>
-              <li><a href="#eventos" data-toggle="tab">Eventos</a></li>
+              <li class="active"><a href="#news" data-toggle="tab">Recientes</a></li>
+              <li><a href="#events" data-toggle="tab">Eventos</a></li>
             </ul>
-            <div class="contenidoNoticias">
+            <div class="tab-content">
               <div class="tab-pane fade in active" id="nuevasNoticias">
                 <ul class="seccionNuevasNoticias">
                   <li>
