--- a/views/ucsi/admision.ejs
+++ b/views/ucsi/admision.ejs
@@ -22,7 +22,7 @@
                  <div class="tituloBarCyan">
                  <h2>SOBRE EL CURSO DE ADMISIÓN</h2>
                  </div>
-               <p>El <b>Sistema de Admisión (CPI)</b>, es aquel mediante el cual. el alumno accede a las carreras de grado de la Universidad     Católica; es un componente del sistema que a tráves de un proceso de integración de saberes y experiencias del alumno, permite promover y verificar las competencias básicas para la vida universitaria.</p>
+               <p>El <b>Sistema de Admisión (CPI)</b>, es aquel mediante el cual el alumno accede a las carreras de grado de la Universidad     Católica; es un componente del sistema que a tráves de un proceso de integración de saberes y experiencias del alumno, permite promover y verificar las competencias básicas para la vida universitaria.</p>
                <h3>OBJETIVOS:</h3>
                <p >&#8226; Desarrollar y capacitar al alumno en las competencias básicas necesarias para el ingreso a la Universidad.</p>
                <p>&#8226; Posibilitar la adquisión de competencias básicas a aquellas que no la poseen.</p>
