--- a/views/partials/footerScripts.ejs
+++ b/views/partials/footerScripts.ejs
@@ -8,4 +8,4 @@
     <script type="text/javascript" src="javascripts/jquery.animate-enhanced.min.js"></script>
     <script type="text/javascript" src="javascripts/jquery.tosrus.min.all.js"></script>
     <script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="javascripts/queryloader2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/queryloader2.min.js"></script>
