--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,18 +64,19 @@
               <li class="active"><a href="#news" data-toggle="tab">Recientes</a></li>
               <li><a href="#events" data-toggle="tab">Eventos</a></li>
             </ul>
+            <% include partials/modal %>
             <div class="tab-content">
               <div class="tab-pane fade in active" id="nuevasNoticias">
                 <ul class="seccionNuevasNoticias">
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#" target="_blank">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/1.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                        <a href="#" target="_blank">VIII Asamblea de los 30 Pueblos</a>
+                        <a href="#alertModal" data-toggle="modal">VIII Asamblea de los 30 Pueblos</a>
                         <span class="fechaNoticia">20/May/16</span>
                       </div>
                     </div>
@@ -83,12 +84,12 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/2.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                        <a href="#">Elecciones Estudiantiles</a>
+                        <a href="#alertModal" data-toggle="modal">Elecciones Estudiantiles</a>
                         <span class="fechaNoticia">18/May/16</span>
                       </div>
                     </div>
@@ -96,30 +97,30 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/3.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                        <a href="#">Conferencia de Prensa (Techauka)</a>
+                        <a href="#alertModal" data-toggle="modal">Conferencia de Prensa (Techauka)</a>
                         <span class="fechaNoticia">17/May/16</span>
                       </div>
                     </div>
                   </li>
                 </ul>
-                <a class="verTodos" href="lista-eventos.html">Ver todas las noticias</a>
+                <a class="verTodos" href="#alertModal" data-toggle="modal">Ver todas las noticias</a>
               </div>
               <div class="tab-pane fade" id="events">
                 <ul class="seccionNuevasNoticias">
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/7.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                        <a href="#">Festejo Día del Maestro 2016</a>
+                        <a href="#alertModal" data-toggle="modal">Festejo Día del Maestro 2016</a>
                         <span class="fechaNoticia">29/Abr/16</span>
                       </div>
                     </div>
@@ -127,12 +128,12 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/8.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                        <a href="#">Donación de Libros</a>
+                        <a href="#alertModal" data-toggle="modal">Donación de Libros</a>
                         <span class="fechaNoticia">18/Nov/15</span>
                       </div>
                     </div>
@@ -140,18 +141,18 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a class="noticiasImg" href="#">
+                        <a class="noticiasImg" href="#alertModal" data-toggle="modal">
                           <img class="media-object" src="images/eventos/9.jpg" alt="img">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#">Acto de Graduación 2015</a>
+                       <a href="#alertModal" data-toggle="modal">Acto de Graduación 2015</a>
                        <span class="fechaNoticia">14/Nov/15</span>
                       </div>
                     </div>
                   </li>
                 </ul>
-                <a class="verTodos" href="lista-eventos">Ver todos los eventos</a>
+                <a class="verTodos" href="#alertModal" data-toggle="modal">Ver todos los eventos</a>
               </div>
             </div>
           </div>
