--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,9 +64,11 @@
               <li class="active"><a href="#news" data-toggle="tab">Recientes</a></li>
               <li><a href="#events" data-toggle="tab">Eventos</a></li>
             </ul>
+
             <% include partials/modal %>
+
             <div class="tab-content">
-              <div class="tab-pane fade in active" id="nuevasNoticias">
+              <div class="tab-pane fade in active" id="news">
                 <ul class="seccionNuevasNoticias">
                   <li>
                     <div class="media">
@@ -235,11 +237,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/ingenieria.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Ingeniería Informática</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -250,11 +252,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/administracion.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Administración de Empresas</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -265,11 +267,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/contabilidad.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Ciencias Contables</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -280,11 +282,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/comercio.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Comercio Internacional</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -295,11 +297,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/derecho.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Derecho</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Derecho</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -310,11 +312,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/marketing.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Marketing</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Marketing</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -325,11 +327,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/enfermeria.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Enfermería</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Enfermería</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -340,11 +342,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/nutricion.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Nutrición</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Nutrición</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
@@ -355,11 +357,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/trabajo-social.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                      <h3 class="nombreCarrera"><a href="#">Trabajo Social</a></h3>
+                      <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Trabajo Social</a></h3>
                       <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                       <p></p>
                     </div>
