--- a/views/partials/eventosSidebar.ejs
+++ b/views/partials/eventosSidebar.ejs
@@ -1,17 +1,18 @@
+          <% include modal %>
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="eventosSidebar">
               <div class="seccionEventosSidebar">
-                <h2>Noticias <span class="fa fa-angle-double-right"></span></h2>
+                <h2>Noticias</h2>
                 <ul class="seccionNuevasNoticias">
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a href="#" class="noticiasImg" target="_blank">
+                        <a href="#alertModal" data-toggle="modal" class="noticiasImg">
                           <img alt="img" src="images/eventos/3.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#" target="_blank">Conferencia de Prensa</a>
+                       <a href="#alertModal" data-toggle="modal">Conferencia de Prensa</a>
                        <span class="fechaNoticia">17/May/16</span>
                       </div>
                     </div>
@@ -19,12 +20,12 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a href="#" class="noticiasImg" target="_blank">
+                        <a href="#alertModal" data-toggle="modal" class="noticiasImg">
                           <img alt="img" src="images/eventos/4.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#" target="_blank">Videoconferencia Intercampus</a>
+                       <a href="#alertModal" data-toggle="modal">Videoconferencia Intercampus</a>
                        <span class="fechaNoticia">21/Abr/16</span>
                       </div>
                     </div>
@@ -32,31 +33,31 @@
                   <li>
                     <div class="media">
                       <div class="media-left">
-                        <a href="#" class="noticiasImg" target="_blank">
+                        <a href="#alertModal" data-toggle="modal" class="noticiasImg">
                           <img alt="img" src="images/eventos/5.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#" target="_blank">Via Crucis</a>
+                       <a href="#alertModal" data-toggle="modal">Via Crucis</a>
                        <span class="fechaNoticia">22/Mar/16</span>
                       </div>
                     </div>
                   </li>
                 </ul>
-                   <a class="verTodos" href="lista-eventos">Ver más</a>
+                   <a class="verTodos" href="#alertModal" data-toggle="modal">Ver más</a>
               </div>
               <div class="seccionEventosSidebar">
-                <h2>Carreras <span class="fa fa-angle-double-right"></span></h2>
+                <h2>Carreras</h2>
                 <ul>
-                  <li><a href="#">Ingeniería Informática</a></li>
-                  <li><a href="#">Administración de Empresas</a></li>
-                  <li><a href="#">Ciencias Contables</a></li>
-                  <li><a href="#">Comercio Internacional</a></li>
-                  <li><a href="#">Derecho</a></li>
-                  <li><a href="#">Marketing</a></li>
-                  <li><a href="#">Enfermeria</a></li>
-                  <li><a href="#">Nutrición</a></li>
-                  <li><a href="#">Trabajo Social</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Derecho</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Marketing</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Enfermeria</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Nutrición</a></li>
+                  <li><a href="#alertModal" data-toggle="modal">Trabajo Social</a></li>
                 </ul>
               </div>
             </div>
