--- a/views/index.ejs
+++ b/views/index.ejs
@@ -234,11 +234,11 @@
                         <div class="desCarreraImg">
                           <img src="images/carreras/ingenieria.jpg" />
                           <div class="card">
-                            <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
+                            <a href="ingenieria-informatica" class="carreras-info">Más información</a>
                           </div>
                         </div>
                         <div class="contenidoDesc">
-                          <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></h3>
+                          <h3 class="nombreCarrera"><a href="ingenieria-informatica">Ingeniería Informática</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                           <p></p>
                         </div>
