--- a/views/partials/eventosSidebar.ejs
+++ b/views/partials/eventosSidebar.ejs
@@ -49,7 +49,7 @@
               <div class="seccionEventosSidebar">
                 <h2>Carreras</h2>
                 <ul>
-                  <li><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></li>
+                  <li><a href="ingenieria-informatica">Ingeniería Informática</a></li>
                   <li><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></li>
                   <li><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></li>
                   <li><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></li>
