--- a/views/partials/eventosSidebar.ejs
+++ b/views/partials/eventosSidebar.ejs
@@ -8,12 +8,12 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" class="noticiasImg">
-                          <img alt="img" src="images/eventos/3.jpg" class="media-object">
+                          <img alt="img" src="images/eventos/01.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#alertModal" data-toggle="modal">Conferencia de Prensa</a>
-                       <span class="fechaNoticia">17/May/16</span>
+                       <a href="#alertModal" data-toggle="modal">Festejo por el Día de la Juventud</a>
+                       <span class="fechaNoticia">21/Sep/16</span>
                       </div>
                     </div>
                   </li>
@@ -21,12 +21,12 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" class="noticiasImg">
-                          <img alt="img" src="images/eventos/4.jpg" class="media-object">
+                          <img alt="img" src="images/eventos/02.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#alertModal" data-toggle="modal">Videoconferencia Intercampus</a>
-                       <span class="fechaNoticia">21/Abr/16</span>
+                       <a href="#alertModal" data-toggle="modal">Celebración Eucarística por la Juventud</a>
+                       <span class="fechaNoticia">20/Sep/16</span>
                       </div>
                     </div>
                   </li>
@@ -34,11 +34,11 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" class="noticiasImg">
-                          <img alt="img" src="images/eventos/5.jpg" class="media-object">
+                          <img alt="img" src="images/eventos/03.jpg" class="media-object">
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#alertModal" data-toggle="modal">Via Crucis</a>
+                       <a href="#alertModal" data-toggle="modal">2da. Conferencia Semana Social</a>
                        <span class="fechaNoticia">22/Mar/16</span>
                       </div>
                     </div>
