--- a/views/ucsi/lista-eventos.ejs
+++ b/views/ucsi/lista-eventos.ejs
@@ -18,15 +18,15 @@
                   <div class="eventosArchivos wow fadeInUp">
                     <div class="imagenPortadaSite">
                       <a class="imagenPort">
-                        <img alt="img" src="images/eventos/1-Defensa%20de%20Tesis.jpg">
+                        <img alt="img" src="images/eventos/01.jpg">
                       </a>
                     </div>
-                    <h2 class="tituloEvento"><a href="#" target="_blank">Defensa de Tesis Trabajo Social</a></h2>
+                    <h2 class="tituloEvento"><a href="#" target="_blank">Festejo por el Día de la Juventud</a></h2>
                     <div class="fechayLugar">
-                      <p><i class="fa fa-clock-o"></i>30/Jun/16</p>
+                      <p><i class="fa fa-clock-o"></i>20/Sep/16</p>
                       <p><i class="fa fa-map-marker"></i>Lugar: San Ignacio Misiones</p>
                     </div>
-                    <p class="eventoDescripcion">El 29 de junio 6 alumnas de la Carrera de Trabajo Social defendieron sus trabajos de Tesis, finalizando así la Carrera de Grado. </p>
+                    <p class="eventoDescripcion">Descripción del evento</p>
                     <a class="saberMasEvento" href="#" target="__blank">Saber más</a>
                   </div>
                 </div>
@@ -35,15 +35,16 @@
                   <div class="eventosArchivos wow fadeInUp">
                     <div class="imagenPortadaSite">
                       <a class="imagenPort">
-                        <img alt="img" src="images/eventos/1.jpg">
+                        <img alt="img" src="images/eventos/02.jpg">
                       </a>
                     </div>
-                    <h2 class="tituloEvento"><a href="#">VIII Asamblea de los 30 Pueblos</a></h2>
+                    <h2 class="tituloEvento"><a href="#">CELEBRACIÓN EUCARÍSTICA POR LA JUVENTUD</a></h2>
                     <div class="fechayLugar">
-                      <p><i class="fa fa-clock-o"></i>20/May/16</p>
+                      <p><i class="fa fa-clock-o"></i>20/Sep/16</p>
                       <p><i class="fa fa-map-marker"></i>Lugar: San Ignacio Misiones</p>
                     </div>
-                    <p class="eventoDescripcion">Los días 20 y 21 de mayo se llevó a cabo la VIII Edición de la Asamblea de los 30 Pueblos Jesuitas Guaraníes. La Asamblea organizada por la Universidad Católica San Ignacio, lleva su octavo año en la realización de este emprendimiento ciudadano ignaciano con el objetivo de conocer y profundizar nuestras raíces histórico culturales para afianzar nuestro presente y proyectarnos al futuro.</p>
+                    <p class="eventoDescripcion">El día 20 de septiembre se celebró la Misa por la Juventud y el compromiso con la sociedad,
+                      presidida por Mons. Mario Melanio Medina, en el Aula Magna de la Universidad.</p>
                     <a class="saberMasEvento" href="#">Saber más</a>
                   </div>
                 </div>
@@ -52,15 +53,18 @@
                   <div class="eventosArchivos wow fadeInUp">
                     <div class="imagenPortadaSite">
                       <a class="imagenPort">
-                        <img alt="img" src="images/eventos/2.jpg">
+                        <img alt="img" src="images/eventos/03.jpg">
                       </a>
                     </div>
-                    <h2 class="tituloEvento"><a href="#">Elecciones Estudiantiles</a></h2>
+                    <h2 class="tituloEvento"><a href="#">2da. Conferencia Semana Social</a></h2>
                     <div class="fechayLugar">
-                      <p><i class="fa fa-clock-o"></i>18/May/16</p>
+                      <p><i class="fa fa-clock-o"></i>19/Sep/16</p>
                       <p><i class="fa fa-map-marker"></i>Lugar: San Ignacio Misiones</p>
                     </div>
-                    <p class="eventoDescripcion">El día miércoles 18 de mayo, se llevaron a cabo las elecciones para el Centro de Estudiantes de la Universidad Católica San Ignacio. Con una gran participación, los alumnos votaron por los candidatos de las Listas MUPED y OPEC, representados por Gualberto Ayala y José Ignacio Sotelo respectivamente, resultando ganador este último. Al día siguiente se realizó la entrega oficial de las Actas y la designación de la nueva Junta Electoral para los Comicios del año siguiente.</p>
+                    <p class="eventoDescripcion">El lunes 19 de septiembre se llevó a cabo la 2da Conferencia en el marco de la XVI Semana Social
+                      de la Universidad Católica San Ignacio Guazú. La conferencia fue dictada por el Lic. Oscar Cáceres, denominada: "Descolonización
+                      y construcción del territorio de la comunicación para la vida", de la Serie: Territorio de la comunicación para la vida.
+                      El evento se desarrolló en el Aula Magna de la Institución a las 18:00 horas.</p>
                     <a class="saberMasEvento" href="#">Saber más</a>
                   </div>
                 </div>
