--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
                   <div class="areaSliderCenter">
                     <h2>Bienvenidos</h2>
                     <p>Universidad Católica "Nuestra Señora de la Asunción"<br>Unidad Pedagógica San Ignacio Misiones</p>
+                    <p>"La tradición de formar a los mejores"</p>
                     <a class="botonSlider" href="#sobreNosotros">¿Quiénes somos?</a>
                   </div>
                 </li>
