--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,6 +16,7 @@
               <li class="active"><a href="/">Inicio</a></li>
               <li><a href="admision">Admisión</a></li>
               <li><a href="carreras">Carreras</a></li>
+              <li><a href="#">Post Grados</a></li>
               <li><a href="lista-eventos">Eventos</a></li>
               <li><a href="galeria">Galería</a></li>
               <li class="dropdown">
