--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,6 +113,7 @@
             </div>
           </div>
         </section>
+        <% include partials/modal %>
         <section id="nuestrasCarreras">
           <div class="container">
             <div class="row">
@@ -132,13 +133,14 @@
                         <div class="desCarreraImg">
                           <img src="images/carreras/ingenieria.jpg" />
                           <div class="card">
-                            <a href="ingenieria-informatica" class="carreras-info">Más información</a>
+                            <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                           </div>
                         </div>
                         <div class="contenidoDesc">
-                          <h3 class="nombreCarrera"><a href="ingenieria-informatica">Ingeniería Informática</a></h3>
+                          <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p><b>Objetivos:</b> Formar profesionales con sólida formación científica en distintas disciplinas informáticas
+                          que sepan desarrollar soluciones informáticas a los problemas que la sociedad moderna nos propone.</p>
                         </div>
                       </div>
                     </li>
@@ -153,7 +155,8 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p><b>Objetivos: </b>Formar profesionales dotados con conocimientos técnicos y científicos avanzados que les permitan desempeñarse
+                          con eficiencia en puestos gerenciales</p>
                         </div>
                       </div>
                     </li>
@@ -168,7 +171,9 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p><b>Objetivos: </b>Formar profesionales con capacidad necesaria para formular, analizar e interceptar estados financieros y
+                          proporcionar información contable, con conocimiento y ética profesional en el cumplimiento de disposiciones y obligaciones jurídicas
+                        y fiscales.</p>
                         </div>
                       </div>
                     </li>
@@ -183,7 +188,8 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p><b>Objetivos:</b> Formar profesionales capaces de detectar oportunidades de negocios en mercados internacionales, de desarrollar programas
+                          de comercialización, así como de administrar las operaciones de la empresa en diferentes mercados.</p>
                         </div>
                       </div>
                     </li>
@@ -197,8 +203,10 @@
                         </div>
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Derecho</a></h3>
-                          <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p class="duracionCarrera"><span>Duración:</span> 6 años</p>
+                          <p><b>Objetivos:</b> Proporcionar conocimientos jurídicos para el desempeño profesional en el ámbito de la abogacia, la magistratura
+                          y el campo político. La carrera ofrece una formación ética y académica acorde con los principios humanos y cristianos, las actualizaciones
+                        e innovaciones en el campo jurídico. </p>
                         </div>
                       </div>
                     </li>
@@ -213,7 +221,8 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Marketing</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p><b>Objetivos: </b>Formar graduados con conocimiento, aptitudes y habilidades para aplicar métodos e instrumentos de análisis económicos en
+                          diversos contextos institucionales, con capacidad para diseñar, dirigir, ejecutar y controlar planes, programas y proyectos económicos.</p>
                         </div>
                       </div>
                     </li>
@@ -227,8 +236,9 @@
                         </div>
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Enfermería</a></h3>
-                          <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p class="duracionCarrera"><span>Duración:</span> 4 años</p>
+                          <p><b>Objetivos:</b> La Carrera de Enfermería pretende crear profesionales capacitados para poder elevar el nivel de la Salud y ayudar
+                            a la población paraguaya más necesitada.</p>
                         </div>
                       </div>
                     </li>
@@ -242,8 +252,9 @@
                         </div>
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Nutrición</a></h3>
-                          <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p class="duracionCarrera"><span>Duración:</span> 4 años</p>
+                          <p><b>Objetivos: </b>Capacitar profesionales en el campo de la Nutrición, capaces de controlar la manutención y sanitación de establecimientos
+                          donde manipulan y almacenan alimentos conformes a las normas nacionales e internacionales.</p>
                         </div>
                       </div>
                     </li>
@@ -257,8 +268,9 @@
                         </div>
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Trabajo Social</a></h3>
-                          <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p></p>
+                          <p class="duracionCarrera"><span>Duración:</span> 4 años</p>
+                          <p><b>Objetivos: </b>Pretende formar profesionales capacitados para el análisis y comprensión de los procesos sociales y culturales.
+                          La función de agente de cambio, y la formulación de la política y la planificación de programas de bienestar social.</p>
                         </div>
                       </div>
                     </li>
